--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "express": "^4.14.1",
     "ioredis": "^2.5.0",
     "sniddl-ajax": "^1.0.4",
-    "socketio": "^1.0.0"
+    "socket.io": "^1.7.3",
   }
 }
