--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "express": "^4.14.1",
     "ioredis": "^2.5.0",
+    "simple-color-picker": "^0.1.2",
     "sniddl-ajax": "^1.0.4",
-    "socket.io": "^1.7.3",
+    "socket.io": "^1.7.3"
   }
 }
